Fixed image alignment of TabStrip in IE9. (RM-4335)
git-svn-id: https://svn.re-motion.org/svn/Remotion/trunk@21795 cb0deee2-328e-b949-94ea-fb3139fab790

--- a/Remotion/Web/Core/Res/Themes/NovaBlue/HTML/TabStrip.css
+++ b/Remotion/Web/Core/Res/Themes/NovaBlue/HTML/TabStrip.css
@@ -77,6 +77,11 @@
   white-space: nowrap;
 }
 
+*.tabStripTabsPane *.anchorBody img
+{
+  vertical-align: text-bottom;
+}
+
 *.tabStripTabsPane ul *.tabStripTabWrapper
 {
   float: left;
